[gd_scene load_steps=21 format=3 uid="uid://b5imxbng84xwc"]

[ext_resource type="Script" path="res://blob_2.gd" id="1_ct30g"]
[ext_resource type="Texture2D" uid="uid://chnnh8qnpme6n" path="res://blob2.png" id="2_xwdvx"]
[ext_resource type="PackedScene" uid="uid://74g62hupy2x0" path="res://hurtbox.tscn" id="3_qgilm"]
[ext_resource type="PackedScene" uid="uid://dk1djiye3iyvm" path="res://stats.tscn" id="4_740pp"]
[ext_resource type="PackedScene" uid="uid://pjgm2mcjmuj2" path="res://hitbox.tscn" id="5_srb2q"]
[ext_resource type="PackedScene" uid="uid://b6j016gflf0kf" path="res://damage_taken.tscn" id="6_vy0mm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fqvbg"]
atlas = ExtResource("2_xwdvx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xccbh"]
atlas = ExtResource("2_xwdvx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_luakp"]
atlas = ExtResource("2_xwdvx")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mj11"]
atlas = ExtResource("2_xwdvx")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe2k3"]
atlas = ExtResource("2_xwdvx")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyy0h"]
atlas = ExtResource("2_xwdvx")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_37ylw"]
atlas = ExtResource("2_xwdvx")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_nld3c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqvbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xccbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luakp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mj11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe2k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyy0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37ylw")
}],
"loop": true,
"name": &"blob_2",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2dbns"]
size = Vector2(21, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rqmf"]
size = Vector2(20, 11.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0svj2"]
size = Vector2(28, 15)

[sub_resource type="Animation" id="Animation_yp2na"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(30, 0)]
}

[sub_resource type="Animation" id="Animation_bygpr"]
resource_name = "blob2_move"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.3, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(30, 0), Vector2(-30, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5cp73"]
_data = {
"RESET": SubResource("Animation_yp2na"),
"blob2_move": SubResource("Animation_bygpr")
}

[node name="Blob2" type="CharacterBody2D"]
z_index = 5
position = Vector2(30, 0)
collision_layer = 4
script = ExtResource("1_ct30g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nld3c")
animation = &"blob_2"
autoplay = "blob_2"
frame = 6
frame_progress = 1.0
offset = Vector2(3, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, -5.5)
shape = SubResource("RectangleShape2D_2dbns")

[node name="Hurtbox" parent="." instance=ExtResource("3_qgilm")]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_4rqmf")
debug_color = Color(0.607843, 0.0588235, 0.141176, 0.419608)

[node name="Stats" parent="." instance=ExtResource("4_740pp")]

[node name="Hitbox" parent="." instance=ExtResource("5_srb2q")]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_0svj2")

[node name="DamageTaken" parent="." instance=ExtResource("6_vy0mm")]
visible = false
offset_left = -4.0
offset_top = -26.0
offset_right = -4.0
offset_bottom = -26.0

[node name="Label" parent="DamageTaken" index="0"]
offset_right = 29.0

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-1, -6)
target_position = Vector2(-100, 0)
collision_mask = 2

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(-1, -6)
target_position = Vector2(100, 0)
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5cp73")
}

[node name="Fire" type="Marker2D" parent="."]
position = Vector2(0.999996, -17)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt" flags=18]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health" flags=18]

[editable path="DamageTaken"]
